--- a/frontend/index.html
+++ b/frontend/index.html
@@ -259,66 +259,6 @@
 
             </div> <!-- item end -->
 
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>PMILOC Mississauga</h3>
-                  <p class="info">Content Publishing <span>&bull;</span> <em class="date">February 2025 - Present</em></p>
-
-                  <p>
-                  <li>Volunteering</li> 
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>UPS Kitchener</h3>
-                  <p class="info">Operations Executive<span>&bull;</span> <em class="date">November 2024 - January 2025</em></p>
-
-                  <p>
-                     <li>Warehouse Operations</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>YWCA Kitchener</h3>
-                  <p class="info">Digital Transition<span>&bull;</span> <em class="date">November 2024 - December 2024</em></p>
-
-                  <p>
-                     <li>Volunteering</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>CallCenterGuys Fredericton </h3>
-                  <p class="info">Customer Support <span>&bull;</span> <em class="date">September 2023 - November 2023</em></p>
-
-                  <p>
-                 
-                  <li>Freedom Mobile</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
 
             <div class="row item">
 
@@ -447,6 +387,49 @@
 
       </div> <!-- End edu -->
 
+      <!-- Volunteer
+      ----------------------------------------------- -->
+      <div class="row edu">
+
+         <div class="three columns header-col">
+            <h1><span>Volunteering</span></h1>
+         </div>
+
+         <div class="nine columns main-col">
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>PMILOC Mississauga</h3>
+                  <p class="info">Content Publishing <span>&bull;</span> <em class="date">February 2025 - Present</em></p>
+
+                  <p>
+                  <li>Volunteering</li> 
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>YWCA Kitchener</h3>
+                  <p class="info">Digital Transition<span>&bull;</span> <em class="date">November 2024 - December 2024</em></p>
+
+                  <p>
+                     <li>Volunteering</li>
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+         </div> <!-- main-col end -->
+
+      </div> <!-- End edu -->
       
 
    </section> <!-- Resume Section End-->
